--- a/system root/Option.ini
+++ b/system root/Option.ini
@@ -4,7 +4,7 @@ TextureDetail=0
 PawnShadow=True
 RenderDeco=True
 GPUAnimation=True
-UseLazyMode=True
+UseLazyMode=False
 SystemDPIScaling=False
 GamePlayViewportX=1920
 GamePlayViewportY=1000
@@ -37,7 +37,7 @@ StaticMeshLod=5.500000
 FirstRun=2
 
 [Game]
-CurFixedDefaultCameraNo=2
+CurFixedDefaultCameraNo=0
 IsFirstSetDefaultCameraNo=True
 IsLockShortcutWnd=False
 
@@ -150,6 +150,7 @@ DefaultPath=D:\Games\Lineage 2\lineage2-work\client-system-updates\Full Client\L
 
 [UI]
 ItemJewelEnchantWndAnimShow=True
+TodoList=True
 
 [ExpBarOtpion]
 bIsShowAdenaInfo=True
