--- a/system root/chatfilter.ini
+++ b/system root/chatfilter.ini
@@ -203,7 +203,7 @@ DefaultSaveOption=true
 OldChatting=True
 keywordsound=False
 keywordactivate=False
-UseAlpha=True
+UseAlpha=False
 ChatResizing=False
 SystemMsgWnd=True
 OnlyUseSystemMsgWnd=True
@@ -211,7 +211,7 @@ UseSystemMsg=True
 SystemMsgWndDamage=True
 SystemMsgWndDice=False
 SystemMsgWndExpendableItem=True
-UseWorldChatSpeaker=True
+UseWorldChatSpeaker=False
 Keyword0=
 Keyword1=
 Keyword2=
@@ -222,6 +222,6 @@ TabIndex2=2
 TabIndex3=3
 TabIndex4=4
 ChatSizeWidth=348
-ChatSizeHeight=379
+ChatSizeHeight=237
 EnterChatting=True
 
