--- a/system root/WindowsInfo.ini
+++ b/system root/WindowsInfo.ini
@@ -8,67 +8,67 @@ v=0
 [OptionWnd]
 w=823
 h=630
-x=1040
-y=229
+x=549
+y=185
 
 [ChatWnd]
 x=0
-y=592
+y=734
 
 [MagicSkillWnd]
-x=237
-y=65
+x=1262
+y=170
 
 [InventoryWnd]
-x=587
-y=184
+x=1180
+y=74
 e=1
 
 [QuitReportWnd]
 x=847
-y=288
+y=323
 
 [MultiSellWnd]
-x=644
-y=179
+x=646
+y=200
 
 [QuestTreeWnd]
-x=1384
-y=137
+x=1398
+y=150
 
 [QuestAlarmWnd]
-x=1650
-y=188
+x=1654
+y=208
 
 [ShortcutWnd.ShortcutWndVertical]
-x=1813
-y=173
+x=1817
+y=204
 w=48
 h=546
 
 [ShortcutWnd.ShortcutWndHorizontal]
-x=555
-y=927
+x=687
+y=918
 w=546
 h=48
 
 [ShortcutWnd.ShortcutWndJoypad]
-x=870
-y=851
+x=872
+y=918
 
 [ShortcutWnd.ShortcutWndJoypadExpand]
 x=742
-y=851
+y=918
 
 [ShortcutWnd.ShortcutWnd_Extend]
-x=1257
-y=717
+x=1240
+y=780
 w=200
 h=126
 
 [AutoPotionWnd]
-x=665
-y=550
+x=797
+y=541
 
 [AutoPotionSubWnd]
 x=778
@@ -81,40 +81,42 @@ y=705
 
 [AutoUseItemWnd]
 x=1739
-y=624
+y=682
 
 [AutoUseItemWndMin]
 x=1855
-y=719
+y=780
 
 [AutomaticPlay]
-x=1256
-y=796
+x=1242
+y=858
+a=True
+e=True
 
 [TargetStatusWnd]
-x=852
+x=854
 y=0
 w=211
 h=44
 
 [SideBar]
 x=1868
-y=204
+y=231
 w=52
 h=524
 e=True
 
 [ClanWndClassicNew]
 x=486
-y=161
+y=192
 
 [UICommandWnd]
 x=1377
 y=0
 
 [PrisonNoticeHUD]
-x=1213
-y=0
+x=1240
+y=-1
 w=130
 h=116
 
@@ -123,22 +125,22 @@ x=200
 y=184
 
 [NoticeHUD]
-x=1699
-y=0
+x=1710
+y=-1
 w=2
 h=107
 
 [DebugWnd]
 x=452
-y=232
+y=265
 
 [AbnormalStatusWnd]
-x=109
-y=87
+x=0
+y=96
 
 [PartyWnd]
 x=0
-y=249
+y=270
 w=176
 h=368
 
@@ -148,7 +150,7 @@ h=1000
 
 [TargetStatusWndClassic]
 e=0
-x=798
+x=837
 y=0
 w=246
 h=55
@@ -175,58 +177,58 @@ y=212
 
 [SideBarSuppressWnd]
 v=False
-x=1509
-y=213
+x=1503
+y=211
 
 [FestivalWRankingWindowTooltip]
 v=False
-x=1503
-y=522
+x=1581
+y=542
 
 [RadarMapWnd]
 w=200
 h=200
-x=1733
-y=0
+x=1715
+y=5
 
 [ClanGfxWnd]
 w=451
 h=601
-x=644
-y=181
+x=683
+y=189
 
 [MiniMapGfxWnd]
-w=1064
-h=601
-x=-67
-y=279
+w=494
+h=488
+x=98
+y=208
 e=0
 
 [ItemJewelEnchantWnd]
 e=1
-x=614
-y=108
+x=692
+y=45
 
 [TeleportMapWnd]
 w=826
 h=508
-x=504
-y=214
+x=543
+y=226
 
 [TimeZoneWnd]
-x=385
-y=152
+x=417
+y=180
 w=1086
 h=639
 
 [ShopLcoinWnd]
-x=434
-y=104
+x=486
+y=53
 
 [StatusWndClassic]
-x=106
+x=0
 y=0
-w=365
+w=472
 h=68
 
 [StatusWnd]
@@ -236,59 +238,59 @@ w=179
 h=80
 
 [HomunculusWnd]
-x=423
-y=154
+x=455
+y=182
 
 [EventletterCollectorWnd]
-x=1073
-y=145
+x=1140
+y=182
 
 [DetailStatusWndClassic]
-x=518
-y=140
+x=366
+y=137
 
 [DetailStatusWnd]
 x=5
-y=111
+y=134
 
 [PersonalConnectionsWnd]
 x=53
-y=254
+y=284
 
 [PartyWndClassic]
 x=0
-y=253
+y=270
 w=176
 h=368
 a=1
 
 [PartyMatchWnd]
-x=653
-y=228
+x=685
+y=257
 
 [ActionWnd]
-x=237
-y=65
+x=1262
+y=170
 
 [WorldserverExitWnd]
-x=1684
-y=775
+x=1762
+y=795
 
 [UIListNoteWnd]
 x=1092
 y=147
 
 [FestivalWRankingWnd]
-x=458
-y=135
+x=497
+y=145
 
 [FestivalWRankingBonusWnd]
-x=719
-y=159
+x=758
+y=169
 
 [ClanWnd]
-x=684
-y=293
+x=723
+y=303
 
 [SteadyBoxWnd]
 x=481
@@ -296,31 +298,31 @@ y=265
 
 [PetWndClassic]
 x=150
-y=214
+y=224
 
 [BlackCouponWnd]
-x=611
-y=206
+x=650
+y=216
 
 [EventInfoWnd]
-x=584
-y=248
+x=623
+y=258
 
 [MacroListWnd]
-x=796
-y=235
+x=835
+y=245
 
 [ItemAutoPeelWnd]
-x=814
-y=246
+x=853
+y=256
 
 [SummonedWndClassic]
-x=1178
-y=252
+x=1256
+y=262
 
 [PetWnd]
-x=1482
-y=261
+x=1560
+y=272
 
 [ViewPortCostumeWnd]
 x=59
@@ -337,20 +339,20 @@ w=164
 h=125
 
 [MagicLampWnd]
-x=1192
-y=222
+x=1270
+y=232
 
 [FestivalRankingWnd]
-x=488
-y=135
+x=527
+y=145
 
 [FestivalRankingBonusWnd]
-x=719
-y=204
+x=758
+y=214
 
 [FestivaRankingWindowTooltip]
-x=1543
-y=536
+x=1621
+y=557
 
 [EventletterCollectorLauncher]
 w=180
@@ -360,17 +362,17 @@ y=404
 
 [ProductInventoryWnd]
 x=53
-y=62
+y=180
 
 [GiftInventoryWnd]
 x=53
-y=62
+y=180
 
 [ClanSearch]
 w=560
 h=478
-x=577
-y=249
+x=616
+y=261
 
 [L2PassWnd]
 x=378
@@ -390,11 +392,11 @@ y=125
 
 [PrivateShopWndHistory]
 x=622
-y=263
+y=273
 
 [OlympiadPlayer2Wnd]
 x=0
-y=468
+y=478
 w=245
 h=44
 
@@ -426,29 +428,29 @@ h=198
 
 [PetStatusWnd]
 x=0
-y=113
+y=128
 w=179
 h=52
 
 [SkillLearnWnd]
 x=320
-y=166
+y=229
 
 [MinimapMissionWndB]
 x=743
 y=247
 
 [MinimapMissionWnd]
-x=861
-y=3960
+x=917
+y=5682
 a=True
 e=True
 p=True
 l=True
 
 [DuelManager]
-x=1665
-y=467
+x=1743
+y=477
 w=177
 h=46
 
